--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/graph_detail_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,8 +14,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
         android:text="@string/division"
-        android:textSize="12sp"
         android:textColor="@color/darkgray"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,8 +27,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="48dp"
         android:text="@string/stock_code"
-        android:textSize="12sp"
         android:textColor="@color/darkgray"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_division"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,8 +40,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="4dp"
         android:text="@string/stock_name"
-        android:textSize="28sp"
         android:textColor="@color/black"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_division" />
 
@@ -52,8 +53,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="4dp"
         android:text="@string/stock_money"
-        android:textSize="28sp"
         android:textColor="@color/black"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
@@ -63,8 +64,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/money_unit"
-        android:textSize="28sp"
         android:textColor="@color/black"
+        android:textSize="28sp"
         app:layout_constraintStart_toEndOf="@+id/tv_stock_money"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
@@ -75,9 +76,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="26dp"
-        android:textSize="12sp"
         android:text="@string/increase_money"
         android:textColor="@color/increase"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_money_unit"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
@@ -87,8 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:text="@string/money_unit"
-        android:textSize="12sp"
         android:textColor="@color/increase"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_increase_money"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
@@ -97,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
-        android:text="("
+        android:text="@string/left_parentheses"
         android:textColor="@color/increase"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_money_unit2"
@@ -111,28 +112,128 @@
         android:text="@string/increase_rate"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name"
-        app:layout_constraintStart_toEndOf="@+id/tv_left_parentheses" />
+        app:layout_constraintStart_toEndOf="@+id/tv_left_parentheses"
+        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
     <TextView
         android:id="@+id/tv_right_parentheses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
+        android:text="@string/right_parentheses"
         android:textColor="@color/increase"
-        android:text=")"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tv_increase_rate"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
 
     <FrameLayout
+        android:id="@+id/fl_graph_shape"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_stock_money">
 
     </FrameLayout>
+
+    <Button
+        android:id="@+id/btn_one_day"
+        android:layout_width="64dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_graph_background"
+        android:text="@string/day"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+
+    <Button
+        android:id="@+id/btn_one_week"
+        android:layout_width="64dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_graph_background"
+        android:text="@string/one_week"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_one_day"
+        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+
+    <Button
+        android:id="@+id/btn_one_month"
+        android:layout_width="64dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_graph_background"
+        android:text="@string/one_month"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_one_week"
+        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+
+    <Button
+        android:id="@+id/btn_three_month"
+        android:layout_width="64dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_graph_background"
+        android:text="@string/three_month"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_one_month"
+        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+
+    <Button
+        android:id="@+id/btn_one_year"
+        android:layout_width="64dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_graph_background"
+        android:text="@string/one_year"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_three_month"
+        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+
+    <Button
+        android:id="@+id/btn_buying"
+        android:layout_width="160dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/btn_buying_background"
+        android:text="@string/buying"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_one_day" />
+
+    <Button
+        android:id="@+id/btn_selling"
+        android:layout_width="160dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/btn_selling_background"
+        android:text="@string/selling"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_buying"
+        app:layout_constraintTop_toBottomOf="@+id/btn_one_day" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
