--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="increase">#e6504f</color>
     <color name="darkgray">#959595</color>
+    <color name="buyingColor">#e6504f</color>
+    <color name="sellingColor">#4f99e6</color>
 </resources>
