--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_F8F8F8">#F8F8F8</color>
+    <color name="grey_E5E5E5">#E5E5E5</color>"
+    <color name="grey_959595">#959595</color>
     <color name="orange_E67C49">#E67C49</color>
+    <color name="red_E6504F">#E6504F</color>
+
 </resources>
