style(xml): 지갑 페이지의 리사이클러뷰 날짜아이템 글꼴 추가, 사이즈 조정

--- a/app/src/main/res/layout/layout_wallet_stocklistday.xml
+++ b/app/src/main/res/layout/layout_wallet_stocklistday.xml
@@ -34,7 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_transday"
+            android:textColor="@color/grey_959595"
             android:textSize="12sp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_wallet_orangecircle"
@@ -45,7 +48,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_vallos"
+            android:textColor="@color/grey_959595"
             android:textSize="12sp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:includeFontPadding="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -55,6 +61,9 @@
             android:layout_height="wrap_content"
             android:text="@string/wallet_vallossmoney"
             android:textColor="@color/red_E6504F"
+            android:textSize="12sp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:includeFontPadding="false"
             app:layout_constraintTop_toBottomOf="@+id/txtview_wallet_valloss"
             app:layout_constraintEnd_toEndOf="@+id/txtview_wallet_valloss"
             />
