style(xml): 지갑 페이지의 mystatus(상단 자산 관련 컴포) 파이차트 제외하고 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey_F8F8F8">#F8F8F8</color>
     <color name="grey_E5E5E5">#E5E5E5</color>"
+    <color name="grey_D7D7D7">#D7D7D7</color>
     <color name="grey_959595">#959595</color>
     <color name="orange_E67C49">#E67C49</color>
     <color name="red_E6504F">#E6504F</color>
