--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="increase">#e6504f</color>
-    <color name="darkgray">#959595</color>
     <color name="buyingColor">#e6504f</color>
     <color name="sellingColor">#4f99e6</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="dusty_orange">#e67c49</color>
+    <color name="brownish_grey">#636363</color>
+    <color name="brownish_grey_50">#80636363</color>
+    <color name="warm_grey">#959595</color>
+    <color name="warm_white">#f8f8f8</color>
 </resources>
