style(xml): colors 수정한 것 지갑, 메인 xml들에 반영

--- a/app/src/main/res/drawable/wallet_mystatus_oval_grey.xml
+++ b/app/src/main/res/drawable/wallet_mystatus_oval_grey.xml
@@ -4,6 +4,6 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/grey_D7D7D7"/>
+        android:color="@color/grey_200"/>
 
 </shape>
