--- a/app/src/main/res/layout/layout_wallet_stocklistday.xml
+++ b/app/src/main/res/layout/layout_wallet_stocklistday.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_transday"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:textSize="12sp"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_vallos"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:textSize="12sp"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_vallossmoney"
-            android:textColor="@color/red_E6504F"
+            android:textColor="@color/pastel_red"
             android:textSize="12sp"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
