--- a/app/src/main/res/drawable/app_listitem_border.xml
+++ b/app/src/main/res/drawable/app_listitem_border.xml
@@ -9,7 +9,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/grey_E5E5E5" />
+                android:color="@color/grey_100" />
             <solid android:color="@color/white" />
         </shape>
     </item>
