--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_F8F8F8">
+        android:background="@color/warm_white">
 
         <ImageView
             android:id="@+id/imgview_main_logo"
