--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_F8F8F8">
+        android:background="@color/warm_white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_wallet_mystatus"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wallet_mystockassetmoney"
-                android:textColor="@color/orange_E67C49"
+                android:textColor="@color/dusty_orange"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:textSize="14sp"
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wallet_mystockassetmoney"
-                android:textColor="@color/orange_E67C49"
+                android:textColor="@color/dusty_orange"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:textSize="14sp"
@@ -126,7 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wallet_totassetmoney"
-                android:textColor="@color/orange_E67C49"
+                android:textColor="@color/dusty_orange"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:textSize="18sp"
