--- a/app/src/main/res/layout/layout_main_stocklistitem.xml
+++ b/app/src/main/res/layout/layout_main_stocklistitem.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:text="@string/main_markettype"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:text="@string/main_stockcode"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             app:layout_constraintStart_toEndOf="@id/txtview_main_markettype"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:text="@string/wallet_transcontent"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:text="@string/wallet_transtime"
-            android:textColor="@color/grey_959595"
+            android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="@+id/txtview_wallet_transcontent"
@@ -102,7 +102,7 @@
         <TextView
             android:id="@+id/txtview_main_stocktotprice"
             android:textSize="12sp"
-            android:textColor="@color/red_E6504F"
+            android:textColor="@color/pastel_red"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:layout_width="wrap_content"
@@ -116,7 +116,7 @@
         <TextView
             android:id="@+id/txtview_main_stockpercent"
             android:textSize="12sp"
-            android:textColor="@color/red_E6504F"
+            android:textColor="@color/pastel_red"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:layout_width="wrap_content"
