--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -18,7 +18,7 @@
             android:layout_marginStart="24dp"
 
             android:layout_marginTop="34dp"
-            android:background="@drawable/app_logo_88x36dp"
+            android:background="@drawable/ic_logo_88x36dp"
             android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="@+id/imgview_main_hint"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:id="@+id/imgview_main_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/app_hint_24dp"
+            android:background="@drawable/ic_hint_24dp"
             android:contentDescription="@string/app_hint"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
@@ -44,7 +44,7 @@
             android:layout_marginTop="28dp"
             android:paddingHorizontal="24dp"
             android:paddingVertical="16dp"
-            android:background="@drawable/main_mycomp_round_8dp"
+            android:background="@drawable/bg_round_orange_8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgview_main_logo">
@@ -80,7 +80,7 @@
                 android:layout_width="144dp"
                 android:layout_height="144dp"
                 android:padding="24dp"
-                android:background="@drawable/main_mycomp_oval"
+                android:background="@drawable/bg_oval_white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
                 <!-- ImgView 들어갈 자리-->
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:background="@drawable/main_mycomp_round_4dp"
+                android:background="@drawable/bg_round_white_4dp"
                 android:contentDescription="@string/main_plusbutton"
                 android:src="@drawable/ic_baseline_add_24"
                 app:layout_constraintTop_toTopOf="parent"
@@ -135,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="42dp"
-            android:background="@drawable/app_listitem_border"
+            android:background="@drawable/bg_listitem_border"
             app:layout_constraintTop_toBottomOf="@+id/layout_main_mycomp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
