--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -16,7 +16,7 @@
             android:id="@+id/layout_wallet_mystatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/wallet_mystatus_round_8dp"
+            android:background="@drawable/bg_round_8dp_orange_3dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="16dp"
@@ -29,7 +29,7 @@
                 android:id="@+id/view_wallet_mystatus_orangecircle"
                 android:layout_height="16dp"
                 android:layout_width="16dp"
-                android:background="@drawable/wallet_mystatus_oval_orange"
+                android:background="@drawable/bg_oval_orange"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 />
@@ -66,7 +66,7 @@
                 android:id="@+id/view_wallet_mystatus_greycircle"
                 android:layout_height="16dp"
                 android:layout_width="16dp"
-                android:background="@drawable/wallet_mystatus_oval_grey"
+                android:background="@drawable/bg_oval_grey"
                 app:layout_constraintTop_toBottomOf="@id/txtview_wallet_mystockassetmoney"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="12dp"
@@ -103,7 +103,7 @@
                 android:id="@+id/view_wallet_piechart"
                 android:layout_width="128dp"
                 android:layout_height="128dp"
-                android:background="@drawable/wallet_mystatus_oval_orange"
+                android:background="@drawable/bg_oval_orange"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -141,7 +141,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="@drawable/app_listitem_border"
+            android:background="@drawable/bg_listitem_border"
             app:layout_constraintTop_toBottomOf="@+id/layout_wallet_mystatus"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
