[update] activity_selling, activity_buying 추가

--- a/app/src/main/res/drawable/bg_buying_button.xml
+++ b/app/src/main/res/drawable/bg_buying_button.xml
@@ -4,10 +4,6 @@
         android:radius="8dp"
         />
     <solid
-        android:color="@color/sellingColor"
-        />
-    <size
-        android:width="160dp"
-        android:height="48dp"
+        android:color="@color/buyingColor"
         />
 </shape>
