--- a/app/src/main/res/drawable/bg_all_buying_button.xml
+++ b/app/src/main/res/drawable/bg_all_buying_button.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="8dp"
+        android:radius="6dp"
         />
     <solid
-        android:color="@color/buyingColor"
+        android:color="@color/white"
         />
-    <size
-        android:width="160dp"
-        android:height="48dp"
+    <stroke
+        android:color="@color/buyingColor"
+        android:width="2dp"
         />
 </shape>
