--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_division"
+        android:id="@+id/text_view_division"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -16,11 +16,12 @@
         android:text="@string/division"
         android:textColor="@color/warm_grey"
         android:textSize="12sp"
+        style="@style/Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_stock_code"
+        android:id="@+id/text_view_stock_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -29,11 +30,12 @@
         android:text="@string/stock_code"
         android:textColor="@color/warm_grey"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_division"
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_division"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_stock_name"
+        android:id="@+id/text_view_stock_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -42,11 +44,12 @@
         android:text="@string/stock_name"
         android:textColor="@color/black"
         android:textSize="28sp"
+        style="@style/Bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_division" />
+        app:layout_constraintTop_toBottomOf="@+id/text_view_division" />
 
     <TextView
-        android:id="@+id/tv_stock_money"
+        android:id="@+id/text_view_stock_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -55,22 +58,24 @@
         android:text="@string/stock_money"
         android:textColor="@color/black"
         android:textSize="28sp"
+        style="@style/Bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_money_unit"
+        android:id="@+id/text_view_money_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/money_unit"
         android:textColor="@color/black"
         android:textSize="28sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_stock_money"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Bold"
+        app:layout_constraintStart_toEndOf="@+id/text_view_stock_money"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_increase_money"
+        android:id="@+id/text_view_increase_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -79,161 +84,173 @@
         android:text="@string/increase_money"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_money_unit"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_money_unit"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_money_unit2"
+        android:id="@+id/text_view_money_unit2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:text="@string/money_unit"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_increase_money"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_increase_money"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_left_parentheses"
+        android:id="@+id/text_view_left_parentheses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:text="@string/left_parentheses"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_money_unit2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_money_unit2"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_increase_rate"
+        android:id="@+id/text_view_increase_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:text="@string/increase_rate"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_left_parentheses"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <TextView
-        android:id="@+id/tv_right_parentheses"
+        android:id="@+id/text_view_right_parentheses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
         android:text="@string/right_parentheses"
         android:textColor="@color/increase"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_increase_rate"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/text_view_increase_rate"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />
 
     <FrameLayout
-        android:id="@+id/fl_graph_shape"
+        android:id="@+id/flame_layout_graph_shape"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_money">
+        app:layout_constraintTop_toBottomOf="@+id/text_view_stock_money">
 
     </FrameLayout>
 
     <Button
-        android:id="@+id/btn_one_day"
+        android:id="@+id/button_one_day"
         android:layout_width="64dp"
         android:layout_height="24dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_graph_background"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/day"
         android:textColor="@color/black"
         android:textSize="12sp"
+        style="@style/Medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+        app:layout_constraintTop_toBottomOf="@+id/flame_layout_graph_shape" />
 
     <Button
-        android:id="@+id/btn_one_week"
+        android:id="@+id/button_one_week"
         android:layout_width="64dp"
         android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_graph_background"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_week"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_one_day"
-        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/button_one_day"
+        app:layout_constraintTop_toBottomOf="@+id/flame_layout_graph_shape" />
 
     <Button
-        android:id="@+id/btn_one_month"
+        android:id="@+id/button_one_month"
         android:layout_width="64dp"
         android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_graph_background"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_month"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_one_week"
-        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/button_one_week"
+        app:layout_constraintTop_toBottomOf="@+id/flame_layout_graph_shape" />
 
     <Button
-        android:id="@+id/btn_three_month"
+        android:id="@+id/button_three_month"
         android:layout_width="64dp"
         android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_graph_background"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/three_month"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_one_month"
-        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/button_one_month"
+        app:layout_constraintTop_toBottomOf="@+id/flame_layout_graph_shape" />
 
     <Button
-        android:id="@+id/btn_one_year"
+        android:id="@+id/button_one_year"
         android:layout_width="64dp"
         android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_graph_background"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_year"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_three_month"
-        app:layout_constraintTop_toBottomOf="@+id/fl_graph_shape" />
+        style="@style/Medium"
+        app:layout_constraintStart_toEndOf="@+id/button_three_month"
+        app:layout_constraintTop_toBottomOf="@+id/flame_layout_graph_shape" />
 
     <Button
-        android:id="@+id/btn_buying"
+        android:id="@+id/button_buying"
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/btn_buying_background"
+        android:background="@drawable/bg_buying_button"
         android:text="@string/buying"
         android:textColor="@color/white"
         android:textSize="20sp"
+        style="@style/Bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_one_day" />
+        app:layout_constraintTop_toBottomOf="@+id/button_one_day" />
 
     <Button
-        android:id="@+id/btn_selling"
+        android:id="@+id/button_selling"
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/btn_selling_background"
+        android:background="@drawable/bg_selling_button"
         android:text="@string/selling"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/btn_buying"
-        app:layout_constraintTop_toBottomOf="@+id/btn_one_day" />
+        style="@style/Bold"
+        app:layout_constraintStart_toEndOf="@+id/button_buying"
+        app:layout_constraintTop_toBottomOf="@+id/button_one_day" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
