--- a/app/src/main/res/layout/fragment_wallet_transaction_none.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction_none.xml
@@ -12,40 +12,40 @@
         >
 
         <ImageView
-            android:id="@+id/imgview_app_nonestock"
+            android:id="@+id/imgview_wallet_nonetransaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_stock_none_48dp"
-            android:contentDescription="@string/app_nonestock"
+            android:background="@drawable/ic_transaction_none_48dp"
+            android:contentDescription="@string/wallet_nonetransaction"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="28dp"
             />
         <TextView
-            android:id="@+id/txtview_app_nonestock"
+            android:id="@+id/txtview_wallet_nonetransaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_nonestock"
+            android:text="@string/wallet_nonetransaction"
             android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/imgview_app_nonestock"
+            app:layout_constraintTop_toBottomOf="@+id/imgview_wallet_nonetransaction"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
             />
         <TextView
-            android:id="@+id/txtview_app_nonestockadvice"
+            android:id="@+id/txtview_wallet_nonestockadvice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_nonestockadvice"
+            android:text="@string/wallet_nonetransactionadvice"
             android:textColor="@color/warm_grey"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:textSize="10sp"
-            app:layout_constraintTop_toBottomOf="@+id/txtview_app_nonestock"
+            app:layout_constraintTop_toBottomOf="@+id/txtview_wallet_nonetransaction"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
