style(xml): refactoring - drawable에서 배경 색깔 빼고 틀만 유지(보더 색, 보더 round)

--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -29,7 +29,8 @@
                 android:id="@+id/view_wallet_mystatus_orangecircle"
                 android:layout_height="16dp"
                 android:layout_width="16dp"
-                android:background="@drawable/bg_oval_orange"
+                android:background="@drawable/bg_oval"
+                android:backgroundTint="@color/dusty_orange"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 />
@@ -66,7 +67,8 @@
                 android:id="@+id/view_wallet_mystatus_greycircle"
                 android:layout_height="16dp"
                 android:layout_width="16dp"
-                android:background="@drawable/bg_oval_grey"
+                android:background="@drawable/bg_oval"
+                android:backgroundTint="@color/grey_200"
                 app:layout_constraintTop_toBottomOf="@id/txtview_wallet_mystockassetmoney"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="12dp"
@@ -103,7 +105,8 @@
                 android:id="@+id/view_wallet_piechart"
                 android:layout_width="128dp"
                 android:layout_height="128dp"
-                android:background="@drawable/bg_oval_orange"
+                android:background="@drawable/bg_oval"
+                android:backgroundTint="@color/dusty_orange"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
