--- a/app/src/main/res/layout/layout_wallet_stocklistday.xml
+++ b/app/src/main/res/layout/layout_wallet_stocklistday.xml
@@ -24,7 +24,8 @@
             android:id="@+id/view_wallet_orangecircle"
             android:layout_width="12dp"
             android:layout_height="12dp"
-            android:background="@drawable/bg_oval_orange"
+            android:background="@drawable/bg_oval"
+            android:backgroundTint="@color/dusty_orange"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
