--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -12,7 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="16dp"
-        android:background="@drawable/bg_round_4dp"
+        android:background="@drawable/bg_round_border_4dp"
         />
     <TextView
         android:id="@+id/txtview_calendar_exp"
