--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -42,7 +42,8 @@
             android:layout_marginTop="28dp"
             android:paddingHorizontal="24dp"
             android:paddingVertical="16dp"
-            android:background="@drawable/bg_round_orange_8dp"
+            android:background="@drawable/bg_round_noborder_8dp"
+            android:backgroundTint="@color/dusty_orange"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgview_main_logo">
@@ -78,7 +79,8 @@
                 android:layout_width="144dp"
                 android:layout_height="144dp"
                 android:padding="24dp"
-                android:background="@drawable/bg_oval_white"
+                android:background="@drawable/bg_oval"
+                android:backgroundTint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
                 <!-- ImgView 들어갈 자리-->
@@ -89,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:background="@drawable/bg_round_white_4dp"
+                android:background="@drawable/bg_round_noborder_4dp"
                 android:contentDescription="@string/main_plusbutton"
                 android:src="@drawable/ic_baseline_add_24"
                 app:layout_constraintTop_toTopOf="parent"
