style(xml): 메인-마이컴포, 지갑-mystatus컴포 부분 그림자 구현

--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -24,6 +24,8 @@
             android:paddingStart="24dp"
             android:paddingBottom="12dp"
             android:paddingEnd="20dp"
+            android:elevation="10dp"
+
             >
             <View
                 android:id="@+id/view_wallet_mystatus_orangecircle"
