--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -42,11 +42,12 @@
             android:layout_marginTop="28dp"
             android:paddingHorizontal="24dp"
             android:paddingVertical="16dp"
-            android:background="@drawable/bg_round_noborder_8dp"
-            android:backgroundTint="@color/dusty_orange"
+            android:background="@drawable/bg_round_orange_noborder_8dp"
+            android:elevation="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgview_main_logo">
+            app:layout_constraintTop_toBottomOf="@+id/imgview_main_logo"
+            >
 
             <TextView
                 android:id="@+id/txtview_main_totasset"
