--- a/app/src/main/res/drawable/bg_search_money_high.xml
+++ b/app/src/main/res/drawable/bg_search_money_high.xml
@@ -23,17 +23,87 @@
     </aapt:attr>
   </path>
   <path
-      android:strokeWidth="1"
-      android:pathData="M17.5,0v120M132.5,0v120M103.8,0v120M46.2,0v120M75,0v120"
-      android:strokeAlpha="0.49"
-      android:fillColor="#00000000"
-      android:strokeColor="#fff"
-      android:fillAlpha="0.49"/>
+      android:pathData="M48.6,0.8h-1v118h1V0.8z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="118.8"
+          android:startX="48.087"
+          android:endY="0.8"
+          android:endX="48.087"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
   <path
-      android:pathData="M148,6.3H0.1M147.9,112.5H0M148,85.9H0.1M148,32.8H0.1M148,59.4H0.1"
-      android:strokeAlpha="0.49"
-      android:strokeWidth="1.11"
-      android:fillColor="#00000000"
-      android:strokeColor="#fff"
-      android:fillAlpha="0.49"/>
+      android:pathData="M84.2,119.3H65.4V0.8h0.9v117.5h16.9V0.8h1v118.5z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="119.292"
+          android:startX="74.79"
+          android:endY="0.8"
+          android:endX="74.79"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M120,119.3h-18.9V0.8h1v117.5H119V0.8h1v118.5z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="119.292"
+          android:startX="110.524"
+          android:endY="0.8"
+          android:endX="110.524"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M147,112.5H0.6V98.4h145.9v-12H0.6v-14h145.9V60.3H0.6V46.2h145.9v-12H0.6v-14H147v1H1.6v12h145.9v14H1.6v12.1h145.9v14.1H1.6v12.1h145.9v13.9H1.6v12.1H147v1z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="112.507"
+          android:startX="74.049"
+          android:endY="20.171"
+          android:endX="74.049"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M137.7,0.8h-1v118h1V0.8z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="118.8"
+          android:startX="137.227"
+          android:endY="0.8"
+          android:endX="137.227"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M30.7,119.3L11.9,119.3L11.9,8.1L0.6,8.1L0.5,0.3h12.3v6.8h16.9L29.7,0.8h1v6.3L147,7.1v1L30.7,8.1v111.2zM12.8,118.3h16.9L29.7,8.1L12.8,8.1v110.2zM1.6,7.1h10.3L11.9,1.3L1.5,1.3l0.1,5.8z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="119.292"
+          android:startX="73.75"
+          android:endY="0.307"
+          android:endX="73.75"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF9FDB9A"/>
+        <item android:offset="1" android:color="#FFFBE69D"/>
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
